assignment3/app-1-dep.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-1-dep
  labels:
    app: app1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app1
  template:
    metadata:
      labels:
        app: app1
    spec:
      containers:
      - name: app1
        image: ghcr.io/denoslab/ensf400-sample-app:v1
        ports:
        - containerPort: 3000
