assignment3/app-1-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-1-svc
spec:
  selector:
    app: app1
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
