assignment3/app-2-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-2-svc
spec:
  selector:
    app: app2
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
