assignment3/app-1-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: main-ingress
  label:
    app: app1
  annotations:
    nginx.ingress.kubernetes.io/canary: "true"
    nginx.ingress.kubernetes.io/canary-weight: "70"
spec:
  rules:
  - host: example.com
    http:
      paths:
      - path: /app
        backend:
          service:
            name: app-1-svc
            port:
              number: 80
